--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,24 @@ header .right-col {
     word-wrap: break-word;
 }
 
+/* Not Found Msg */
+
+#not-found-msg-wr {
+    display: none;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sad-emoji {
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 7em;
+}
+
 
 /* Tablet */ 
 
