--- a/css/styles.css
+++ b/css/styles.css
@@ -156,11 +156,22 @@ header .right-col {
     word-wrap: break-word;
 }
 
+/* Err msg */
+
+#err-msg-wr {
+    display: none;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Not Found Msg */
 
 #not-found-msg-wr {
     display: none;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     margin-top: 5em;
     display: flex;
@@ -169,9 +180,17 @@ header .right-col {
 }
 
 .sad-emoji {
-    font-size: 60px;
+    font-size: 40px;
     text-align: center;
-    margin-bottom: 7em;
+    margin-bottom: 0.6em;
+}
+
+.not-found-msg-title {
+    font-weight: 700;
+}
+
+.not-found-msg-body {
+    text-align: center;
 }
 
 
@@ -239,6 +258,10 @@ header .right-col {
         padding: 0;
         vertical-align: top;
         margin-right: 20px;
+    }
+
+    #not-found-msg-wr {
+        max-width: 769px;
     }
 
 }
